# iree

./: .gitmodules  CMakeLists.txt
compiler/plugins/input/StableHLO/Conversion/Preprocessing/: DotGeneralToDot.cpp
compiler/src/iree/compiler/Codegen/: Passes.h  Passes.td
compiler/src/iree/compiler/Codegen/Common/: BUILD  CMakeLists.txt  GPUPatterns.cpp  GPUPatterns.h  Passes.cpp  Passes.h  TileAndDistributeToWorkgroupsPass.cpp  TileDispatchUsingInterface.cpp
compiler/src/iree/compiler/Codegen/Interfaces/: PartitionableLoopsInterface.cpp
compiler/src/iree/compiler/Codegen/Utils/: Utils.cpp  (+2 more)
compiler/src/iree/compiler/GlobalOptimization/: BUILD.bazel  CMakeLists.txt  MaterializeHomogeneousEncodings.cpp  Passes.cpp  Passes.h  Passes.td  ReshapeSoftmaxToNC.cpp
iree/compiler/Codegen/LLVMCPU/: KernelDispatch.cpp  LLVMCPUTileFuseAndVectorizeLinalgTensorOps.cpp  Passes.cpp
iree/compiler/Codegen/LLVMCPU/test/: materialize_launch_configuration.mlir
iree/compiler/Dialect/Flow/Transforms/: CMakeLists.txt  FoldConstantAndExtractSlice.cpp  Passes.cpp  Passes.h  Passes.td
runtime/src/iree/base/: string_view.c  string_view.h  string_view_test.cc  tracing.h
runtime/src/iree/base/tracing/: CMakeLists.txt  tracy.h
runtime/src/iree/builtins/ukernel/: query_tile_sizes.c  query_tile_sizes.h
runtime/src/iree/hal/: buffer.c  command_buffer.c  command_buffer.h
runtime/src/iree/hal/local/: executable_plugin_manager.c
runtime/src/iree/hal/utils/: BUILD  CMakeLists.txt  mpi_channel_provider.c
runtime/src/iree/modules/hal/: module.c
runtime/src/iree/modules/vmvx/: CMakeLists.txt  elementwise.c  elementwise.h  exports.inl  module.c
runtime/src/iree/vm/: stack.c
(+64 files in other folders)
